--- a/SOURCES/unbound_exporter.service
+++ b/SOURCES/unbound_exporter.service
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 EnvironmentFile=-/etc/default/unbound_exporter
-User=prometheus
+User=root
 ExecStart=/usr/bin/unbound_exporter $UNBOUND_EXPORTER_OPTS
 Restart=on-failure
 
